--- a/css/compenents/edit-modal.css
+++ b/css/compenents/edit-modal.css
@@ -30,9 +30,15 @@
 	justify-self: center;
 	align-self: center;
 	font-size: 1.5rem;
+	width: 90%;
+	height: 90%;
 }
 .txt-input {
 	grid-column: 1 / 5;
+	text-align: center;
+}
+.option-container .txt-input input {
+	font-size: 1.5rem;
 }
 /* .option-up {
 }
@@ -54,12 +60,14 @@
 	grid-column: 1 / 4;
 }
 .option-btn-container .impact select {
+	font-size: 1.5rem;
 	width: 100%;
 	height: 100%;
 }
 .sticker-container {
 	width: 100%;
 	justify-content: space-around;
+	align-items: center;
 	grid-row: 5;
 	grid-column: 1 / 5;
 	background-color: black;
