--- a/css/compenents/box.css
+++ b/css/compenents/box.css
@@ -1,3 +1,8 @@
 .img {
+	width: 200px;
+	height: 200px;
 	background-size: contain;
+	background-repeat: no-repeat;
+	background-color: var(--clr3);
+	border-radius: 1rem;
 }
