--- a/css/compenents/gallery.css
+++ b/css/compenents/gallery.css
@@ -1,18 +1,16 @@
+/* .img-gallery-container {
+} */
+
 .img-gallery {
 	padding: 50px;
 	background-color: var(--clr3);
-	/* width: 90%; */
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	margin: auto;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr;
 	justify-content: center;
 	align-items: center;
-	gap: 40px;
+	gap: 20px;
 	border-radius: 1rem;
-	/* display: none; */
 }
 /* .img-gallery-bg {
 	position: absolute;
@@ -25,10 +23,3 @@
 	z-index: -1;
 	border-radius: 1rem;
 } */
-
-.img {
-	background-color: var(--clr3);
-	width: 200px;
-	height: 200px;
-	border-radius: 1rem;
-}
