--- a/css/compenents/header.css
+++ b/css/compenents/header.css
@@ -1,17 +1,17 @@
 header {
-	/* height: 200px; */
-	/* background-color: var(--clr3); */
-	padding-top: 20px;
-	justify-content: space-around;
+	justify-content: space-between;
+	margin: auto;
+	margin-bottom: 20px;
 }
 
 .logo {
-	font-family: game-play;
+	font-family: game-play, sans-serif;
 	font-size: 2rem;
-	line-height: 1rem;
+	margin: 0;
 }
 .logo-meme {
 	color: var(--clr4);
+	display: block;
 }
 .search-bar {
 	background: var(--clr5);
@@ -19,6 +19,7 @@ header {
 	border-radius: 1rem;
 	align-items: center;
 	padding: 0 20px;
+	height: 80px;
 }
 .search-bar > * {
 	background: none;
@@ -26,6 +27,7 @@ header {
 	font-size: 1.5rem;
 	line-height: 2;
 	border: none;
+	font-family: koulen; /* why do i need this line? */
 }
 
 .search-input {
