--- a/css/compenents/header.css
+++ b/css/compenents/header.css
@@ -2,6 +2,7 @@ header {
 	justify-content: space-between;
 	margin: auto;
 	margin-bottom: 20px;
+	padding-top: 10px;
 }
 
 .logo {
@@ -27,7 +28,7 @@ header {
 	font-size: 1.5rem;
 	line-height: 2;
 	border: none;
-	font-family: koulen; /* why do i need this line? */
+	/* font-family: koulen; why do i need this line? */
 }
 
 .search-input {
@@ -36,4 +37,28 @@ header {
 
 .search-input:focus-visible {
 	outline: none;
+}
+
+.search-btn {
+	background: var(--clr5);
+	border-radius: 1rem;
+	padding: 0 10px;
+}
+
+.search-icon {
+	height: 80px;
+	width: 80px;
+	background-image: url(/assets/svg/search.svg);
+	background-size: 80px 80px;
+	position: relative;
+	bottom: 8px;
+}
+
+/* this changes the color of the default 'x' that appears in the search bar */
+[type='search']::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	height: 70px;
+	width: 70px;
+	background-image: url(/assets/svg/X.svg);
+	background-size: 70px 70px;
 }
