--- a/css/compenents/gallery.css
+++ b/css/compenents/gallery.css
@@ -5,6 +5,7 @@
 	padding: 50px;
 	background-color: var(--clr3);
 	margin: auto;
+	margin-bottom: 60px;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: 1fr 1fr 1fr 1fr;
 	justify-content: center;
