--- a/css/setup/vars.css
+++ b/css/setup/vars.css
@@ -5,6 +5,7 @@
 	--clr3: #fb5875;
 	--clr4: #bcbcbc;
 	--clr5: #282a2b;
+	--clr6: #ffcc71;
 	--grad1: linear-gradient(90deg, rgba(40, 42, 43, 1) 0%, rgba(36, 38, 40, 1) 35%, rgba(26, 28, 30, 1) 100%);
 	--grad2: radial-gradient(circle, rgba(40, 42, 43, 1) 0%, rgba(36, 38, 40, 1) 35%, rgba(26, 28, 30, 1) 100%);
 
