--- a/css/compenents/edit-modal.css
+++ b/css/compenents/edit-modal.css
@@ -87,10 +87,10 @@
 	height: 90%;
 	border-radius: 0.8rem;
 }
-.option-btn-container .impact {
+.option-btn-container .font-select {
 	grid-column: 1 / 4;
 }
-.option-btn-container .impact select {
+.option-btn-container .font-select select {
 	font-size: 1.5rem;
 	width: 100%;
 	height: 100%;
