--- a/css/compenents/header.css
+++ b/css/compenents/header.css
@@ -21,6 +21,7 @@ header {
 	justify-content: space-around;
 	align-items: center;
 	font-size: 1.8rem;
+	font-family: Koulen, sans-serif;
 }
 
 .top-nav a {
