--- a/css/compenents/edit-modal.css
+++ b/css/compenents/edit-modal.css
@@ -8,9 +8,9 @@
 	/* opacity: 0; */
 	display: none;
 	padding: 5px;
-	min-height: 900px;
+	min-height: 960px;
 	border-radius: 1rem;
-	margin-bottom: 40px;
+	margin-bottom: 60px;
 }
 .edit-modal * {
 	font-family: inter-bold, sans-serif;
@@ -33,8 +33,10 @@
 
 .edit-modal .option-container {
 	background-color: #ae3d51;
-	min-height: 750px;
 	margin-right: 30px;
+	padding: 5px;
+	border-radius: 1rem;
+	min-height: 850px;
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 	/* justify-content: space-around;
