--- a/css/compenents/gallery.css
+++ b/css/compenents/gallery.css
@@ -4,13 +4,15 @@
 .img-gallery {
 	padding: 50px;
 	background-color: var(--clr3);
-	margin: auto;
+	margin: 0 auto;
 	margin-bottom: 60px;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-column-start: auto;
 	/* grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr),minmax(200px, 1fr),minmax(200px, 1fr) */
 	/* grid-template-rows: 1fr 1fr 1fr 1fr; */
 	gap: 20px;
 	border-radius: 1rem;
+	min-height: 920px;
 	max-height: 1020px;
 	overflow-y: scroll;
 }
@@ -18,26 +20,9 @@
 	background-color: var(--clr3);
 	border-radius: 1rem;
 }
-/* .img-gallery::-webkit-scrollbar-track {
-} */
+
 .img-gallery::-webkit-scrollbar-thumb {
 	background: var(--clr6);
 	border-radius: 1rem;
 	box-shadow: inset 0 0 2px rgb(0, 0, 0);
-	/* a trick to make the scroll bar short: */
-	border-top: 400px solid var(--clr3);
-	border-bottom: 400px solid var(--clr3);
 }
-
-/* ::-webkit-scrollbar-corner  */
-/* .img-gallery-bg {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 96%;
-	height: 96%;
-	background-color: rgba(0, 0, 0, 0.05);
-	z-index: -1;
-	border-radius: 1rem;
-} */
