--- a/css/setup/vars.css
+++ b/css/setup/vars.css
@@ -2,7 +2,7 @@
 	/* colors */
 	--clr1: #111315;
 	--clr2: #25282a;
-	--clr3: #fb5875;
+	--clr3: #ffcc71;
 	--clr4: #bcbcbc;
 	--clr5: #282a2b;
 	--clr6: #ffcc71;
@@ -14,3 +14,4 @@
     --m: 890px;
     --w: 1500px; */
 }
+/* --clr3: #fb5875; */
