--- a/css/compenents/edit-modal.css
+++ b/css/compenents/edit-modal.css
@@ -1,13 +1,14 @@
 .edit-modal {
+	max-width: 800px;
 	margin: auto;
 	grid-template-columns: 1fr 1fr;
 	place-items: center;
 	justify-content: space-around;
 	padding: 5px;
-	min-height: 960px;
 	border-radius: 1rem;
 	margin-bottom: 60px;
 	display: none;
+	flex-direction: column;
 }
 .edit-modal * {
 	font-family: inter-bold, sans-serif;
@@ -33,29 +34,36 @@
 
 .edit-modal .option-container {
 	margin-right: 30px;
-	padding: 10px;
+	margin-top: 20px;
+	/* padding: 10px; */
 	border-radius: 1rem;
-	min-height: 850px;
+	/* min-height: 700px; */
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 	box-shadow: 0px 0px 0 3px var(--clr3);
 }
-
+.edit-modal .option-container button {
+	height: 60%;
+	width: 60%;
+}
 .edit-modal .option-container > * {
-	justify-self: center;
-	font-size: 1.5rem;
-	width: 90%;
-	height: 90%;
+	/* justify-self: space-around; */
+	/* align-self: center; */
+	/* font-size: 1.5rem; */
+	/* height: 60%;
+	width: 60%; */
+	margin: auto;
 	border-radius: 0.8rem;
 }
 .txt-input {
 	grid-column: 1 / 5;
-	text-align: center;
+	/* text-align: center; */
+	/* place-self: center; */
 }
 
 .txt-input h2 {
 	font-size: 1.5rem;
-	margin-top: 1.5rem;
+	/* margin-top: 1.5rem; */
 }
 
 .txt-input input {
@@ -63,21 +71,7 @@
 	padding: 5px;
 	border: none;
 	font-family: inter-reg, sans-serif;
-}
-.option-up {
-	width: 70px;
-}
-.option-down {
-	width: 70px;
-}
-
-.option-plus {
-}
-.option-delete {
-	width: 70px;
-}
-.option-add img {
-	width: 70px;
+	width: 100%;
 }
 
 .edit-modal .option-btn-container {
@@ -87,30 +81,43 @@
 	background-color: var(--clr7);
 	padding: 10px;
 	width: 100%;
+	height: 100%;
 }
 .option-btn-container > * {
-	width: 95%;
-	height: 95%;
+	/* width: 95%
+	height: 95%; */
 	border-radius: 0.8rem;
 }
 .option-btn-container .font-select {
-	grid-column: 1 / 4;
-}
-.option-btn-container .font-select select {
-	font-size: 1.5rem;
+	grid-column: 1/4;
 	width: 100%;
-	height: 100%;
+	height: 40%;
+	place-self: center;
 }
+
 .sticker-container {
 	width: 100%;
+	height: 50%;
+	place-self: center;
 	justify-content: space-around;
 	align-items: center;
 	grid-row: 5;
 	grid-column: 1 / 5;
 	background-color: #775861;
 }
-/* .share {
-} */
+
+.option-container img {
+	width: 40%;
+}
+.option-brn-container img {
+	width: 100%;
+}
+.save-option {
+	height: 40%;
+	grid-column: 4;
+	place-self: center;
+}
+
 .download {
 	grid-column: 4;
 }
@@ -129,4 +136,16 @@
 .color-selction {
 	flex-direction: column;
 	justify-content: space-around;
+	align-items: center;
+}
+
+.option-up {
+	/* width: 70px; */
+}
+.option-down {
+	/* width: 70px; */
+}
+
+.option-delete {
+	/* width: 70px; */
 }
