--- a/css/compenents/footer.css
+++ b/css/compenents/footer.css
@@ -1,8 +1,8 @@
 footer {
 	background-color: var(--clr1);
-	position: relative;
 	bottom: 0;
 	width: 100%;
+	margin-top: auto;
 }
 .footer-grid {
 	padding: 40px;
