--- a/css/compenents/gallery.css
+++ b/css/compenents/gallery.css
@@ -4,12 +4,14 @@
 .img-gallery {
 	margin: 0 auto;
 	margin-bottom: 60px;
+	margin-top: 60px;
 	grid-template-columns: 1fr 1fr;
 	gap: 20px;
 	border-radius: 1rem;
 	min-height: 920px;
 	max-height: 1020px;
 	overflow-y: scroll;
+	place-items: start start;
 }
 .img-gallery::-webkit-scrollbar {
 	background-color: #2f161b;
