--- a/css/compenents/search-nav.css
+++ b/css/compenents/search-nav.css
@@ -1,7 +1,7 @@
 .search-nav {
 	margin: auto;
-	margin-bottom: 20px;
-	overflow: hidden;
+	/* overflow: hidden; */
+	flex-wrap: wrap;
 }
 
 .search-bar {
@@ -11,7 +11,7 @@
 	align-items: center;
 	padding: 0 20px;
 	height: 80px;
-	max-width: 620px;
+	max-width: 490px;
 }
 .search-bar > * {
 	background: none;
@@ -22,10 +22,6 @@
 	font-family: inter-reg;
 }
 
-.search-input {
-	padding: 10px 40px;
-}
-
 .search-input:focus-visible {
 	outline: none;
 }
@@ -34,32 +30,30 @@
 	background: var(--clr5);
 	color: var(--clr4);
 	border-radius: 1rem;
-	padding: 0 10px;
 }
 .search-btn:hover {
 	color: var(--clr3);
 }
 
 .search-icon {
-	height: 80px;
-	width: 80px;
+	height: 30px;
+	width: 30px;
 	background-image: url(/assets/svg/search.svg);
-	background-size: 80px 80px;
-	position: relative;
+	background-size: 30px 30px;
+	/* position: relative; */
 	bottom: 8px;
 }
 
 /* this changes the color of the default 'x' that appears in the search bar */
 [type='search']::-webkit-search-cancel-button {
 	-webkit-appearance: none;
-	height: 70px;
-	width: 70px;
+	height: 20px;
+	width: 20px;
 	background-image: url(/assets/svg/X.svg);
-	background-size: 70px 70px;
+	background-size: 20px 20px;
 }
 
 .key-word-container {
-	width: 100%;
 	justify-content: space-around;
 	align-items: center;
 	font-family: inter-reg, sans-serif;
@@ -70,13 +64,12 @@
 
 .keywords {
 	white-space: nowrap;
-
-	/* align-items: center; */
 }
 .keywords > * {
 	align-self: center;
 	margin-right: 5px;
 }
-.expand {
-	margin: 10px;
+
+.more {
+	display: none;
 }
